--- a/reveal/index.html
+++ b/reveal/index.html
@@ -70,7 +70,7 @@
 				
 				<section>
 				<p>Cats are funny</p>
-					<aside class="notes">Try not to laugh!</aside>
+					<aside class="notes">Try not to laugh! Really don't laugh!</aside>
 				</section>
 
 
